<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.scalecube</groupId>
  <artifactId>scalecube-parent-pom</artifactId>
  <version>0.0.23-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>ScaleCube parent project</name>

  <description>
    ScaleCube is a lightweight decentralized cluster membership, failure detection, messaging and
    gossip protocol library for the Java VM.
  </description>
  <inceptionYear>2015</inceptionYear>
  <url>http://scalecube.io</url>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <scm>
    <url>https://scalecube.io</url>
    <connection>scm:git:git@github.com:scalecube/scalecube-parent.git</connection>
    <developerConnection>scm:git:git@github.com:scalecube/scalecube-parent.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <prerequisites>
    <maven>3.3.9</maven>
  </prerequisites>

  <developers>
    <developer>
      <id>scalecube.io</id>
      <name>The ScaleCube Project Contributors</name>
      <email>info@scalecube.io</email>
      <organization>The ScaleCube Project</organization>
      <organizationUrl>http://scalecube.io/</organizationUrl>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- plugins versions -->
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
    <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
    <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
    <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
    <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
    <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>

    <!-- check style configuration -->
    <checkstyle.config.location>google_checks.xml</checkstyle.config.location>
    <com.puppycrawl.tools.checkstyle-version>8.14</com.puppycrawl.tools.checkstyle-version>

    <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
    <dockerfile.maven.version>1.4.6</dockerfile.maven.version>
    <dockerfile.maven.extension.version>1.4.6</dockerfile.maven.extension.version>
    <dockerfile.useMavenSettingsForAuth>true</dockerfile.useMavenSettingsForAuth>
    <dockerfile.googleContainerRegistryEnabled>false</dockerfile.googleContainerRegistryEnabled>
  </properties>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <configuration>
          <failsOnError>true</failsOnError>
          <failOnViolation>true</failOnViolation>
          <configLocation>${checkstyle.config.location}</configLocation>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version>
          <configuration>
            <generateBackupPoms>false</generateBackupPoms>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <classpathPrefix>lib/</classpathPrefix>
                <mainClass>${mainClass}</mainClass>
              </manifest>
            </archive>
            <excludes>
              <exclude>META-INF/*.SF</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven-dependency-plugin.version}</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <overWriteReleases>false</overWriteReleases>
                <outputDirectory>${project.build.directory}/lib</outputDirectory>
                <silent>true</silent>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>xml-maven-plugin</artifactId>
          <version>1.0.2</version>
          <executions>
            <execution>
              <id>verify-xml</id>
              <goals>
                <goal>check-format</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>${maven-pmd-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven-checkstyle-plugin.version}</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>${com.puppycrawl.tools.checkstyle-version}</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>checkstyle</id>
              <goals>
                <goal>check</goal>
                <goal>checkstyle-aggregate</goal>
              </goals>
              <phase>validate</phase>
              <configuration>
                <includeTestSourceDirectory>false</includeTestSourceDirectory>
                <linkXRef>false</linkXRef>
                <consoleOutput>true</consoleOutput>
                <violationSeverity>warning</violationSeverity>
                <failsOnError>true</failsOnError>
                <maxAllowedViolations>0</maxAllowedViolations>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco-maven-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>test</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- Releases -->
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven-release-plugin.version}</version>
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <useReleaseProfile>true</useReleaseProfile>
            <releaseProfiles>release</releaseProfiles>
            <tagNameFormat>v@{project.version}</tagNameFormat>
            <goals>deploy</goals>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>${nexus-staging-maven-plugin.version}</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>ossrh</serverId>
            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven-enforcer-plugin.version}</version>
          <executions>
            <execution>
              <id>enforce</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <reactorModuleConvergence>
                    <message>The reactor is not valid</message>
                    <ignoreModuleDependencies>true</ignoreModuleDependencies>
                  </reactorModuleConvergence>
                  <dependencyConvergence />
                </rules>
              </configuration>
            </execution>
            <execution>
              <id>enforce-maven</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>[3.3.9,)</version>
                  </requireMavenVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>post-integration-test</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven-javadoc-plugin.version}</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <phase>post-integration-test</phase>
              <goals>
                <goal>jar</goal>
              </goals>
              <configuration>
                <additionalparam>-Xdoclint:none</additionalparam>
                <quiet>true</quiet>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${maven-gpg-plugin.version}</version>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- Docker -->
        <plugin>
          <groupId>com.spotify</groupId>
          <artifactId>dockerfile-maven-plugin</artifactId>
          <version>${dockerfile.maven.version}</version>
          <executions>
            <execution>
              <id>default</id>
              <goals>
                <goal>build</goal>
                <goal>tag</goal>
              </goals>
              <configuration>
                <buildArgs>
                  <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
                </buildArgs>
                <tag>latest</tag>
                <tag>${project.version}</tag>
              </configuration>
            </execution>
            <execution>
              <id>create-extra-tags</id>
              <goals>
                <goal>tag</goal>
              </goals>
              <configuration>
                <tag>${extratags}</tag>
                <skipTag>${noextratags}</skipTag>
              </configuration>
            </execution>
            <execution>
              <id>deployment</id>
              <goals>
                <goal>push</goal>
              </goals>
              <configuration>
                <tag>latest</tag>
                <tag>${project.version}</tag>
              </configuration>
            </execution>
            <execution>
              <id>push-extra-tags</id>
              <goals>
                <goal>push</goal>
              </goals>
              <configuration>
                <tag>${extratags}</tag>
                <skip>${noextratags}</skip>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>xml-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skipstyle</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>skippmd</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>no-extra-tags</id>
      <properties>
        <noextratags>true</noextratags>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>extra-tags</id>
      <properties>
        <noextratags>false</noextratags>
      </properties>
      <activation>
        <property>
          <name>extratags</name>
        </property>
      </activation>
    </profile>
    <profile>
      <id>SkipDockerGoals</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <dockerfile.skip>true</dockerfile.skip>
      </properties>
    </profile>
    <profile>
      <id>RunDockerGoals</id>
      <activation>
        <os>
          <family>unix</family>
        </os>
        <file>
          <exists>/usr/bin/docker</exists>
        </file>
      </activation>
      <properties>
        <dockerfile.skip>false</dockerfile.skip>
      </properties>
    </profile>
  </profiles>

</project>
